# soar-water-quality-copilot

./: .env  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  agents.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  HANDOVER.md  pyproject.toml
backend/src/: db.py  lambda_handler.py  main.py
backend/src/cv/: aws_provider.py  classifier.py  engine.py  kit_classifier.py  models.py  tds_processor.py
backend/src/static/: index.html
docs/: PLAN.md  cv_module.md  part-12a-aws-setup.md  part-12b.aws-config.md  plan.md
infra/: README.md  app.py
infra/sql/: init.sql
infra/stacks/: api_stack.py  compute_stack.py  database_stack.py  s3_stack.py
scripts/: start-server.bat  start-server.sh  stop-server.bat  stop-server.sh
src/backend/: app.py  schemas.py
src/backend/agents/: __init__.py  aws_retrieval_agent.py  chat_agent.py  community_reporting_agent.py  cv_agent.py  education_agent.py  exa_crawl_agent.py  llm.py  master_agent.py  safety_agent.py  schemas.py  state.py  treatment_guidance_agent.py  water_quality_agent.py
src/backend/cv/: __init__.py  heavy_metals_processor.py  submission_handler.py  tds_processor.py
src/backend/cv/reference_charts/: default_strip.json  generic_16_in_1.json  heavy_metals_strip.json  tds_thresholds.json
src/backend/knowledge/: guidance.json  loader.py  safety_rules.json  sources.json  thresholds.json
src/backend/pipelines/: ingest_knowledge.py
src/backend/tools/: aws_db_tool.py  cv_tool.py  exa_crawl_tool.py  rag_search_tool.py
src/frontend/: next.config.ts  package-lock.json  package.json
src/frontend/__tests__/: AppPage.test.tsx
src/frontend/src/app/: globals.css  layout.tsx  page.tsx
src/frontend/src/app/app/: page.tsx
src/frontend/src/components/: Agents.tsx  Contour.tsx  CtaFooter.tsx  Hero.tsx  HowItWorks.tsx  Impact.tsx  Loader.tsx  NavBar.tsx  Reveal.tsx
src/frontend/src/lib/: api.ts  content.ts  mock-data.ts  risk.ts
src/frontend/src/types/: index.ts
tests/: test_agents.py  test_cv_tool.py  test_exa.py
tests/cv/: test_classifier.py  test_engine.py  test_risk_flags.py  test_submission.py
(+7 files in other folders)
