[project]
name = "waterforall-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "opencv-python-headless>=4.10.0",
    "numpy>=2.0.0",
    "Pillow>=10.4.0",
    "pydantic>=2.8.0",
    "colormath>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cv"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
